examples/test/testpolicy3535.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3535
  namespace: namespace432
spec:
  podSelector:
    matchLabels:
      key11: value8
      key36: value38
      key7: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value19
      podSelector:
        matchLabels:
          key16: value16
          key13: value13
          key19: value17
